--- a/credentials.yml
+++ b/credentials.yml
@@ -12,7 +12,7 @@ facebook:
   secret: "your_facebook_secret"
   page-access-token: "your_access_token"
 telegram:
-  access_token: "1220990862:AAFOr1Dev5mmhQeR9HojuzK69D1na_w8MjY"
+  access_token: "your_telegram_access_token"
   verify: "jobs4u_bot"
   webhook_url: "https://800e2f1c5160.ngrok.io/webhooks/telegram/webhook"
 twilio:
